# CryptoCore

./: .gitignore  CMakeLists.txt  CryptoCore.sln
CryptoCore/: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CryptoCore.cpp  CryptoCore.vcxproj  README.md  SECURITY.md
CryptoCore/docs/: API.md  DEVELOPMENT.md  USERGUIDE.md
CryptoCore/include/: aes_primitive.h  cli_parser.h  csprng.h  file_io.h  padding.h
CryptoCore/include/modes/: cbc.h  cfb.h  ctr.h  ecb.h  ofb.h
CryptoCore/src/: aes_primitive.cpp  cli_parser.cpp  csprng.cpp  file_io.cpp  main.cpp  padding.cpp
CryptoCore/src/aead/: etm.cpp  etm.h
CryptoCore/src/hash/: sha256_stream.cpp  sha256_stream.h  sha3_stream.cpp  sha3_stream.h
CryptoCore/src/kdf/: hkdf.cpp  hkdf.h  pbkdf2.cpp  pbkdf2.h
CryptoCore/src/mac/: hmac.cpp  hmac.h
CryptoCore/src/modes/: cbc.cpp  cfb.cpp  ctr.cpp  ecb.cpp  gcm.cpp  gcm.h  ofb.cpp
CryptoCore/tests/: NIST-AES-test.bat  NIST.bat  TEST_ALLSPRINTS_ON_LINUX.txt  TEST_ALLSPRINTS_ON_WINDOWS.txt  err.txt  err2.txt  final_tes22t.bat  final_test.bat  final_test_fixed.bat  iv.hex  out1.txt  out2.txt  out3.txt  out4.txt  out5.txt  out6.txt  plain.txt  ref1.txt  ref2.txt  test.txt  test_all_modes(SPRINT 2).bat  test_all_modes.bat  test_hkdf.cpp  test_pbkdf2.cpp  test_s1.bat  test_s2.bat  test_salt_random.cpp  test_sha256.cpp  weak1.txt
CryptoCore/tests/unit/: test_main.cpp
